--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "next": "14.0.4",
+    "node-html-parser": "^6.1.12",
     "react": "^18",
     "react-dom": "^18"
   },
